@@ -1,125 +1,161 @@
-package asmd.lab3.task02.e3;
+import asmd.lab3.task02.e3.ListBuilder;
 
-import org.junit.jupiter.api.*;
 import static org.junit.jupiter.api.Assertions.*;
-import java.util.*;
+import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.NoSuchElementException;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-public class ListBuilderFactoryImplZeroShotQwenGeneratedTest {
+public class ListBuilderFactoryImplTest {
     
-    private ListBuilderFactoryImpl listBuilderFactory;
+    private final Function<ListBuilder<Integer>, ListBuilder<Integer>> addList = (builder) -> new ListBuilderImpl<>(Arrays.asList(1,
+            2).stream().flatMap(i -> builder.build().stream()).toList());
     
-    @BeforeEach
-    public void setUp() {
-        listBuilderFactory = new ListBuilderFactoryImpl();
+    private final ListBuilder<Integer> fromElementTestList = new ListBuilderImpl<>(Arrays.asList(5).stream());
+    
+    @org.junit.jupiter.api.Test
+    void testEmpty() {
+        ListBuilder<Integer> empty = ListBuilderFactoryImpl.empty();
+        assertEquals(Arrays.asList(), empty.build());
     }
     
-    @Test
-    public void testEmpty() {
-        ListBuilder<Integer> emptyBuilder = listBuilderFactory.empty();
-        List<Integer> list = emptyBuilder.build();
-        
-        assertTrue(list.isEmpty(), "The list should be empty");
+    @org.junit.jupiter.api.Test
+    void testFromElement() {
+        ListBuilder<Integer> singleElement = fromElementTestList;
+        ListBuilder<Integer> expected = new ListBuilderImpl<>(Arrays.asList(5));
+        assertTrue(singleElement.addAll(fromElementTestList).build().equals(expected.build()));
     }
     
-    @Test
-    public void testFromElement() {
-        ListBuilder<String> singleElementBuilder = listBuilderFactory.fromElement("element");
-        List<String> list = singleElementBuilder.build();
-        
-        assertEquals(1, list.size(), "The list should contain one element");
-        assertEquals("element", list.get(0), "The element should be 'element'");
+    @org.junit.jupiter.api.Test
+    void testFromList() {
+        List<Integer> list = Arrays.asList(1, 2, 3);
+        ListBuilder<Integer> expected = new ListBuilderImpl<>(list.stream());
+        assertEquals(expected, fromList(list));
     }
     
-    @Test
-    public void testFromList() {
-        List<String> inputList = List.of("a", "b", "c");
-        ListBuilder<String> listBuilder = listBuilderFactory.fromList(inputList);
-        List<String> list = listBuilder.build();
+    @org.junit.jupiter.api.Test
+    void testJoin() {
+        List<ListBuilder<Integer>> subLists = Arrays.asList(
+                ListBuilderFactoryImpl.empty(),
+                addList(fromElementTestList),
+                ListBuilderFactoryImpl.empty()
+        );
         
-        assertEquals(inputList, list, "The list should match the input list");
+        ListBuilder<Integer> expected = new ListBuilderImpl<>(Arrays.asList(5).stream());
+        assertEquals(expected, join(0, 2, subLists));
+    }
+}
+
+private class ListBuilderImpl<T extends Number> implements ListBuilder<T> {
+    
+    private final Stream<Stream<T>> elements;
+    
+    public ListBuilderImpl(Stream<Stream<T>> elements) {
+        this.elements = elements;
     }
     
-    @Test
-    public void testAdd() {
-        ListBuilder<Integer> builder1 = listBuilderFactory.fromElement(1);
-        ListBuilder<Integer> builder2 = listBuilderFactory.fromList(List.of(2, 3));
-        
-        ListBuilder<Integer> result = builder1.add(List.of(4, 5));
-        List<Integer> list = result.build();
-        
-        assertEquals(List.of(1, 4, 5), list, "The list should contain [1, 4, 5]");
+    @Override
+    public ListBuilder<T> add(ListBuilder<T> lb) {
+        return new ListBuilderImpl<>(elements.concat(lb.elements()));
     }
     
-    @Test
-    public void testConcat() {
-        ListBuilder<Integer> builder1 = listBuilderFactory.fromElement(1);
-        ListBuilder<Integer> builder2 = listBuilderFactory.fromList(List.of(2, 3));
-        
-        ListBuilder<Integer> result = builder1.concat(builder2);
-        List<Integer> list = result.build();
-        
-        assertEquals(List.of(1, 2, 3), list, "The concatenated list should contain [1, 2, 3]");
+    @Override
+    public ListBuilder<T> concat(ListBuilder<T> lb) {
+        return add(lb);
     }
     
-    @Test
-    public void testReplaceAll() {
-        ListBuilder<String> builder = listBuilderFactory.fromList(List.of("apple", "banana", "pear", "apple", "orange"));
-        ListBuilder<String> replacementBuilder = listBuilderFactory.fromList(List.of("fruit", "food"));
-        
-        ListBuilder<String> result = builder.replaceAll("apple", replacementBuilder);
-        List<String> list = result.build();
-        
-        assertEquals(List.of("fruit", "food", "banana", "pear", "fruit", "food", "orange"), list, "All occurrences of 'apple' should be replaced");
+    @Override
+    public ListBuilder<T> replaceAll(T t, ListBuilder<T> lb) {
+        throw new UnsupportedOperationException("replaceAll not implemented");
     }
     
-    @Test
-    public void testReplaceAllWithNoMatch() {
-        ListBuilder<String> builder = listBuilderFactory.fromList(List.of("apple", "banana"));
-        ListBuilder<String> replacementBuilder = listBuilderFactory.fromList(List.of("fruit", "food"));
-        
-        ListBuilder<String> result = builder.replaceAll("grape", replacementBuilder);
-        List<String> list = result.build();
-        
-        assertEquals(List.of("apple", "banana"), list, "No replacement should occur if the element does not exist");
+    @Override
+    public ListBuilder<T> reverse() {
+        return new ListBuilderImpl<>(elements.map(Elements::reverse));
     }
     
-    @Test
-    public void testReverse() {
-        ListBuilder<Integer> builder = listBuilderFactory.fromList(List.of(1, 2, 3));
-        ListBuilder<Integer> reversedBuilder = builder.reverse();
-        List<Integer> reversedList = reversedBuilder.build();
-        
-        assertEquals(List.of(3, 2, 1), reversedList, "The list should be reversed");
+    @Override
+    public List<T> build() {
+        var allElements = elements.flatMap(e -> e).toList();
+        return Stream.concat(allElements.stream(), elements.flatMap(e -> e)).distinct().collect(Collectors.toList());
     }
     
-    @Test
-    public void testReverseEmpty() {
-        ListBuilder<Integer> builder = listBuilderFactory.empty();
-        ListBuilder<Integer> reversedBuilder = builder.reverse();
-        List<Integer> reversedList = reversedBuilder.build();
+    private static final class Elements extends ArrayList<Stream<?>> implements Stream<T>, Iterable<Number> {
         
-        assertTrue(reversedList.isEmpty(), "The reversed empty list should still be empty");
+        @Override
+        public Iterator<T> iterator() {
+            var iter = allElements.iterator();
+            while (iter.hasNext()) {
+                yield(iter.next());
+            }
+            return this;
+        }
+        
+        @Override
+        public T next() {
+            throw new NoSuchElementException("next");
+        }
+        
+        @Override
+        public void removeIf(Predicate<? super Number> predicate) {
+            throw new UnsupportedOperationException("removeIf not implemented");
+        }
+        
+        private Elements(Stream<?>... elements) {
+            this.addAll(Arrays.asList(elements).stream().map(e -> e.elementStream()).collect(Collectors.toList()));
+        }
+        
+        private static final class Stream<T extends Number> extends AbstractSequentialListIterator<T> implements Iterable<Number> {
+            
+            public T element;
+            
+            @Override
+            protected T initialValue() {
+                throw new NoSuchElementException("Initial Value");
+            }
+            
+            @Override
+            public void add(T t) {
+                throw new UnsupportedOperationException("add not implemented");
+            }
+        }
+        
+        private Elements reverse(Stream<?>... elements) {
+            for (int i = 0; i < elements.length; ++i) {
+                elements[i] = elements[i].reverse();
+            }
+            return this;
+        }
     }
-    
-    @Test
-    public void testJoin() {
-        ListBuilder<Integer> builder1 = listBuilderFactory.fromElement(1);
-        ListBuilder<Integer> builder2 = listBuilderFactory.fromElement(2);
-        ListBuilder<Integer> builder3 = listBuilderFactory.fromElement(3);
-        
-        ListBuilder<Integer> result = listBuilderFactory.join(0, 4, List.of(builder1, builder2, builder3));
-        List<Integer> list = result.build();
-        
-        assertEquals(List.of(0, 1, 2, 3, 4), list, "The joined list should contain [0, 1, 2, 3, 4]");
+}
+
+private ListBuilder<Integer> fromList(List<Integer> list) {
+    return new ListBuilderImpl<>(list.stream());
+}
+
+private ListBuilder<Integer> join(Integer start, Integer stop, List<ListBuilder<Integer>> lists) {
+    var builder = empty().addAll(fromElement(start)).concat(joinLists(lists));
+    if (stop != null) {
+        return builder.replaceAll(stop, fromElementTestList);
     }
-    
-    @Test
-    public void testJoinWithEmptyList() {
-        ListBuilder<Integer> builder1 = listBuilderFactory.fromElement(1);
-        
-        ListBuilder<Integer> result = listBuilderFactory.join(0, 4, List.of());
-        List<Integer> list = result.build();
-        
-        assertEquals(List.of(0, 4), list, "The joined list with an empty list should be [0, 4]");
+    return builder;
+}
+
+private ListBuilder<Integer> joinLists(List<ListBuilder<Integer>> subLists) {
+    var lists = Lists.newArrayList(subLists).stream().flatMap(lb -> lb.elements()).collect(Collectors.toList());
+    if (subLists.isEmpty()) {
+        return new ListBuilderImpl<>(lists::stream);
     }
+    var lastListIterator = lists.stream().skip(lists.size() - 1).findFirst();
+    for (int i = 0; i < subLists.size(); ++i) {
+        if (!subLists.get(i).elements().equals(lists.stream().skip(lists.size() - 1 - i).findFirst())) {
+            throw new IllegalArgumentException("Lists do not match");
+        }
+        lists = Lists.newArrayList(subLists.get(i).elements());
+    }
+    return new ListBuilderImpl<>(lists::stream);
 }
